tests/snapshots/e2e_snapshots__crossterm_demo_snapshot.snap
---
source: tests/e2e_snapshots.rs
assertion_line: 237
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="520" height="286">
<rect width="100%" height="100%" fill="#111111"/>
<text font-family="monospace" font-size="14" y="26.0">
  <tspan fill="#cccccc" x="8.0">  rg Library — Crossterm Interactive Demo                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="44.0">
  <tspan fill="#cccccc" x="8.0">                                                            </tspan>
</text>
<text font-family="monospace" font-size="14" y="62.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">┌─────────────────────────────────────┐</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="80.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="98.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="116.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="134.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="152.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">    </tspan>
  <tspan fill="#008000" x="66.8">@</tspan>
  <tspan fill="#cccccc" x="75.2">                                </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="170.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="188.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="206.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="224.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                  </tspan>
  <tspan fill="#800000" x="184.4">D</tspan>
  <tspan fill="#cccccc" x="192.8">                  </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="242.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="260.0">
  <tspan fill="#cccccc" x="8.0">  </tspan>
  <tspan fill="#c0c0c0" x="24.8">│</tspan>
  <tspan fill="#cccccc" x="33.2">                                     </tspan>
  <tspan fill="#c0c0c0" x="344.0">│</tspan>
  <tspan fill="#cccccc" x="352.4">                   </tspan>
</text>
<text font-family="monospace" font-size="14" y="278.0">
  <tspan fill="#cccccc" x="8.0">  HP: 100 | Arrow Keys to move, Q or ESC to Quit            </tspan>
</text>
</svg>
